# smolagents-test

./: SYSTEM.md
agent/: .env.example  .gitignore  pyproject.toml
agent/agent/: main.py
agent/agent/sat/: __init__.py
agent/agent/tools/: __init__.py  bash.py
