[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Bright Lee",email = "benevbright@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "smolagents[openai] (>=1.26.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "python-telegram-bot (>=22.0,<23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sagent = "agent.main:main"